2008-10-10  Victor Manuel Jaquez Leal  <vjaquez@maemo.org>

	* src/operations.cc: (ip_download_cur_reply) if the download is
	cancelled the cache directories are cleaned. (NB#8988 - 'Not
	enough memory' error note shown while downloading in mentioned
	scenario)

2008-10-06  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/settings.cc: Disable red_pill_show_all and
	red_pill_show_magic_sys by default, to better keep people out of
	trouble.

2008-08-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/package-info-cell-renderer.c: Use gtk_paint_layout instead
	of pango_cairo_show_layout to get the theming right.

2008-08-22  Victor Manuel Jaquez Leal  <vjaquez@maemo.org>

	* src/package-info-cell-renderer.c
	(package_info_cell_renderer_render):
	Honor the theme color properties in the cell widget (M3503)

2008-07-16  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc: Use get_display_version instead of
	available_version in all the right places.

2008-07-15  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.h, src/main.cc (package_info::get_display_version):
	New.
	* src/util.cc (package_info_func): Use it instead of explicit
	code.
	* src/operations.cc (ip_install_with_info): Use it for the
	confirmation dialog.
	(ip_download_cur): Use it for the progress title.
	(uninstall_package): Use it for the confirmation dialog.

2008-06-11  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.16

	* src/util.cc (package_info_func): Hide epoch of version (N86191).

	* src/apt-worker.cc (AptWorker::Initialize): Add "--force-optold"
	to dpkg options.

2008-06-09  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.15

	* src/log.cc (save_log_do_nothing): New, used as the continuation
	for all calls to annoy_user_with_gnome_vfs_result so that the URI
	is not freed prematurely (N80933).
	(save_log): Set success to false when gnome_vfs_create failed.  Do
	not use save_log_cont_2, free uri explicitly at then end.
	(save_log_cont_2): Removed.
