@@ -28,6 +28,7 @@
 #include <hildon/hildon-window.h>
 
 void create_menu (HildonWindow *window);
+void set_settings_menu_visible (bool);
 void set_details_menu_sensitive (bool);
 void set_search_menu_sensitive (bool);
 void set_operation_menu_label (const gchar *label, bool sensitive,
